# whatismyip

./: LICENSE  README.MD  README.md  package-lock.json  package.json  pyproject.toml
conf/: requirements.txt
conf/templates/: install-venv.tmpl  install.tmpl
src/: apply-scripts.py  index.js  main.py  update-semver.py
src/package_name/: __init__.py  cli.py
test/: cli.py
